frontend/styles/Home.module.css
.main {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  min-height: 100vh;
}

.navbar {
  width: 100%;
  color: white;
  background-color: var(--darker);
  padding: 2rem 5rem;
  position: fixed;
  top: 0;
  z-index: 999;
  display: flex; 
  align-items: center;
}



.navbar > ul {
  list-style-type: none;
  align-items: center;
}

.navRight {
  float: right;
  display: flex;
  align-items: center;
  gap: 3rem;
  margin-top: 0rem;
}

.navLeft {
  width: 100rem;
  float: left;
  display: flex;
  align-items: center;
  gap: 3rem;
}

.navLeft > li {
  font-size: large;
}

.hero {
  margin-top: 7em;
  background-color: var(--lightest);
  padding: 0rem 0rem 0rem 5rem;
  display: flex;
  align-items: center;
  gap: 5em;
  @media screen and (max-width: 1000px) {
    flex-direction: column;
    padding: 7rem 2rem 2rem 2rem;
  }
}

.heroImage {
  border-radius: 100px 0px 0px 100px;
  margin-bottom: 3em;
}

.heroText {
  display: flex;
  flex-direction: column;
  gap: 1em;
  font-size: 1.5em;
  margin-top: -3em;
}

.heroText > h1 {
  color: var(--red);
  font-size: 3em;
}

.heroText > h3 {
  color: var(--gray-dark);
}

.divider {
  width: 100%;
  color: white;
  background-color: var(--darker);
  padding: 5rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: center;
  justify-items: center;
}

.graySection {
  background-color: var(--lightest);
  padding: 5rem;
}

.graySection > h1 {
  color: var(--red);
  font-size: 3rem;
  text-align: center;
  margin-bottom: 2rem;
}

.section {
  background-color: white;
  padding: 5rem;
}

.section > h1 {
  color: var(--red);
  font-size: 3rem;
  text-align: center;
  margin-bottom: 2rem;
}

.section > p {
  font-size: 1.3rem;
  padding-bottom: 2rem;
}

.wrapper {
  text-align: center;
}

.button {
  background-color: var(--red);
  font-size: 1.3rem;
  color: rgb(255, 255, 255);
  padding: 1em;
  border-width: 0;
  border-radius: 15px;
  margin: auto;
}

.button:hover {
  background-color: #a01616; 
  color: white;
}

.navButton {
  background-color: var(--red);
  font-size: 1rem;
  color: white;
  padding: 1em;
  border-width: 0;
  border-radius: 15px;
  margin: auto;
}



.logoutButton {
  float: right;
  background-color: var(--red);
  font-size: 1rem;
  color: rgb(255, 255, 255);
  padding: 1em;
  border-width: 0;
  border-radius: 15px;
  margin-left: auto;
}

.logoutButton:hover {
  background-color: #a01616; /* Green */
  color: white;
}

.flex {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  gap: 3em;
}

.column {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.burgerWrapper {
  display: flex;
  align-items: center;
  float: right;
}

.footerLogo {
  float: left;
}

.footerIcons > div{
  margin-right: 10px;
}

.footerIcons{
  display: flex;
  flex-direction: row;
}


.footerButton {
  background-color: var(--red);
  font-size: 1rem;
  color: white;
  padding: 1em;
  border-width: 0;
  border-radius: 15px;
  margin-left: auto;
}

.footerIcons {
  margin-right: auto;
  padding-left: 6em;
  position: relative;
  top: -2em;
}

